# proto_depth

./: .gitignore  DepthCamera_2025-04-13-16-14-01.json  OPTIMIZATIONS.md  README.md  analyze_model.py  build_cuda_on_jarvis.sh  build_cuda_on_runpod.sh  data_address.txt  dataloader.py  download_progress_images.sh  energy_optimization.md  energy_optimizer_native.py  external_server.txt  hello.py  loss.py  main.py  notes.txt  offset_pred_cameras.py  old_loss.py  optimize_scene.py  optimize_time.py  pyproject.toml  remote_setup.sh  requirements.txt  run_ebm.sh  run_ebm_native.sh  run_energy_native.py  run_on_jarvis.sh  run_on_runpod.sh  run_optimization.py  run_viz_server.sh  runpod_address.txt  setup.py  setup_jarvis_env.sh  setup_runpod_env.sh  sync_and_run.sh  tinygrad_pointcloud.py  train_model.py  train_on_jarvis.sh  visualize_cameras.py  (+4 more)
geometry_utils/: __init__.py  transforms.py
geometry_utils/spatial_hash/: __init__.py  setup.py  spatial_hash.cpp  (+2 more)
scripts/: test_camera_extrinsics.py
src/: __init__.py  chamfer_distance.py  chamfer_distance_v2.py  chamfer_distance_v3.py  chamfer_distance_v4.py  chamfer_distance_v5.py  dataloader.py  lsh_chamfer.py  lsh_chamfer_v2.py  lsh_chamfer_v3.py  lsh_chamfer_v4.py  lsh_chamfer_v5.py  main.py  mesh_utils.py  model.py  point_cloud.py  scene.py  scene_v2.py  train.py  utils.py  visualize.py  visualize_3d.py  viz_exporter.py
tests/: __init__.py  test_bunny_visibility.py  test_dataloader.py  test_lsh_chamfer.py
viz_server/: DATA_FORMAT.md  README.md  app.py  export_frame_json.py  main.py  pyproject.toml  validate_frame.py
(+39 files in other folders)
