[project]
name = "proto-depth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annoy>=1.17.3",
    "imageio>=2.36.1",
    "matplotlib>=3.10.0",
    "pymeshlab>=2023.12.post2",
    "rtree>=1.3.0",
    "scipy>=1.14.1",
    "tinygrad>=0.10.0",
    "torch>=2.5.1",
    "trimesh>=4.5.3",
    "tqdm>=4.66.0",
]
