[project]
name = "proto-depth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaolin>=0.1",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
