[project]
name = "proto-depth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "open3d>=0.19.0",
    "pydantic>=2.11.3",
    "setuptools>=78.1.0",
    "torch==2.4",
    "tqdm>=4.67.1",
]
